Add Scoreboard Overlay Component with Admin Controls and Local Storage Support
- Implemented ScoreboardOverlay.razor and ScoreboardOverlay.razor.cs for displaying and managing scoreboard data.
- Added properties for teams, scores, timeouts, and game clock management.
- Included functionality for different sports with specific rules (Basketball, Football, Soccer, Hockey, Baseball).
- Integrated local storage for saving and loading scoreboard settings.
- Created a JavaScript file for Bootstrap modal helper functions to enhance UI interactions.
- Added styling for scoreboard display and admin controls.

--- a/web_backend/src/web_backend.Domain.Shared/Localization/web_backend/en.json
+++ b/web_backend/src/web_backend.Domain.Shared/Localization/web_backend/en.json
@@ -4,6 +4,11 @@
     "AppName": "web_backend",
     "Menu:Home": "Home",
     "Welcome": "Welcome",
-    "LongWelcomeMessage": "Welcome to the application. This is a startup project based on the ABP framework. For more information, visit abp.io."
+    "LongWelcomeMessage": "Welcome to the application. This is a startup project based on the ABP framework. For more information, visit abp.io.",
+    "Menu:Admin": "Administration",
+    "Menu:Teams": "Teams",
+    "Menu:Scores": "Scores",
+    "Menu:GameTimes": "Game Times",
+    "Menu:Scoreboards": "Scoreboards"
   }
 }
